# p2pc

./: Cargo.toml  README.md  shell.nix
p2pc/: Cargo.toml
p2pc-gui/: Cargo.toml
p2pc-gui/src/: main.rs
p2pc-lib/: Cargo.toml
p2pc-lib/src/: lib.rs
p2pc/src/: main.rs
p2pc/src/app/: keypair_wrapper.rs  mod.rs
p2pc/src/app/chat/: chats.rs  contact.rs  contacts.rs  message.rs  mod.rs
src/: app.rs  main.rs
src/app/: mod.rs
src/app/chat/: message.rs  mod.rs
