[package]
name = "p2pc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
libp2p = { version = "0.53.2", features = ["tokio", "yamux", "quic", "noise", "tcp", "ping", "gossipsub"] }
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
uuid = "1.8.0"
