[package]
    name         = "p2pc"
    version      = "0.1.0"
    authors      = [ "Nicolai Bergmann", "Mark Orlando Zeller" ]
    edition      = "2021"
    include      = [ "LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml" ]
    rust-version = "1.76"

[dependencies]
    egui = "0.27.2"
    eframe = { version = "0.27.2", default-features = false, features = [
        "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
        "default_fonts", # Embed the default egui fonts.
        "glow",          # Use the glow rendering backend. Alternative: "wgpu".
        "persistence",   # Enable restoring app state when restarting the app.
    ] }
    log = "0.4"
    uuid = { version = "1.8.0", features = [ "v4", "js", "serde" ] }
    serde           = { version = "1", features = [ "derive" ] }
    random_color    = "0.8.0"
    rand            = "0.8.5"
    catppuccin-egui = { version = "5.0", default-features = false, features = [ "egui27" ] }
    chrono          = { version = "0.4.38", features = ["serde"] }
    clap = { version = "4.5.4", features = ["derive"] }
    env_logger = "0.11.3"
    libp2p = { version = "0.53.2", features = ["serde"] }
    tokio = { version = "1.37.0", features = ["full"] }
    p2pc-lib = { version = "0.1.0", path = "../p2pc-lib" }
    anyhow = "1.0.82"

[patch.crates-io]
    # If you want to use the bleeding edge version of egui and eframe:
    # egui = { git = "https://github.com/emilk/egui", branch = "master" }
    # eframe = { git = "https://github.com/emilk/egui", branch = "master" }

    # If you fork https://github.com/emilk/egui you can test with:
    # egui = { path = "../egui/crates/egui" }
    # eframe = { path = "../egui/crates/eframe" }
